# respondeay

./: .buildpacks  .gitignore  Procfile  README.md  answers.py  bot.py  pyproject.toml  requirements.txt  text_handler.py
data/: answers.txt
